# boost-meta-programming

./: CMakeLists.txt
01_runtime_find/: 01_runtime_find.cpp  CMakeLists.txt
02_constexpr_find/: 02_constexpr_find.cpp  CMakeLists.txt
03_constexpr_variables/: 03_constexpr_variables.cpp  CMakeLists.txt
04_constexpr_contexts/: 04_constexpr_contexts.cpp  CMakeLists.txt
05_variadic_function/: 05_variadic_function.cpp  CMakeLists.txt
06_variadic_template/: 06_variadic_template.cpp  CMakeLists.txt
07_variadic_template_initializer_list/: 07_variadic_template_initializer_list.cpp  CMakeLists.txt
08_variadic_template_array/: 08_variadic_template_array.cpp  CMakeLists.txt
09_variadic_template_handwritten/: 09_variadic_template_handwritten.cpp  CMakeLists.txt
10_variadic_template_boost_preprocessor/: 10_variadic_template_boost_preprocessor.cpp  CMakeLists.txt
11_boost_mpl_find/: 11_boost_mpl_find.cpp  CMakeLists.txt
12_boost_mpl_find_minus_one/: 12_boost_mpl_find_minus_one.cpp  CMakeLists.txt
13_boost_mp11_find_minus_one/: 13_boost_mp11_find_minus_one.cpp  CMakeLists.txt
14_boost_hana_find_minus_one/: 14_boost_hana_find_minus_one.cpp  CMakeLists.txt
15_boost_hana_index_if/: 15_boost_hana_index_if.cpp  CMakeLists.txt
16_boost_hana_any_of/: 16_boost_hana_any_of.cpp  CMakeLists.txt
17_constexpr_std_find/: 17_constexpr_std_find.cpp  CMakeLists.txt
18_boost_mp11_find_type/: 18_boost_mp11_find_type.cpp  CMakeLists.txt
19_boost_hana_find_type/: 19_boost_hana_find_type.cpp  CMakeLists.txt
20_boost_hana_for_each/: 20_boost_hana_for_each.cpp  CMakeLists.txt
21_boost_fusion_for_each/: 21_boost_fusion_for_each.cpp  CMakeLists.txt
22_boost_hana_serialize/: 22_boost_hana_serialize.cpp  CMakeLists.txt
23_boost_hana_serialize_constexpr_if/: 23_boost_hana_serialize_constexpr_if.cpp  CMakeLists.txt
24_boost_hana_serialize_template_specialization/: CMakeLists.txt  (+1 more)
(+12 files in other folders)
