cmake_minimum_required(VERSION 3.6.2)
project(boost-meta-programming)
set(CMAKE_CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED ON)
set(Boost_USE_STATIC_LIBS ON)
set(BOOST_ROOT C:/Users/Boris/Documents/boost_1_70_0)
#set(BOOST_ROOT /cygdrive/c/Users/Boris/Documents/boost_1_70_0/)
find_package(Boost) # REQUIRED COMPONENTS chrono system thread timer)
include_directories(${Boost_INCLUDE_DIRS})
link_libraries(${Boost_LIBRARIES})
add_subdirectory(01_runtime_find)
add_subdirectory(02_constexpr_find)
add_subdirectory(03_constexpr_variables)
add_subdirectory(04_constexpr_contexts)
add_subdirectory(05_variadic_function)
add_subdirectory(06_variadic_template)
add_subdirectory(07_variadic_template_initializer_list)
add_subdirectory(08_variadic_template_array)
add_subdirectory(09_variadic_template_handwritten)
add_subdirectory(10_variadic_template_boost_preprocessor)
add_subdirectory(11_boost_mpl_find)
add_subdirectory(12_boost_mpl_find_minus_one)
add_subdirectory(13_boost_mp11_find_minus_one)
add_subdirectory(14_boost_hana_find_minus_one)
add_subdirectory(15_boost_hana_index_if)
add_subdirectory(16_boost_hana_any_of)
add_subdirectory(17_constexpr_std_find)
add_subdirectory(18_boost_mp11_find_type)
add_subdirectory(19_boost_hana_find_type)
add_subdirectory(20_boost_hana_for_each)
add_subdirectory(21_boost_fusion_for_each)
add_subdirectory(22_boost_hana_serialize)
add_subdirectory(23_boost_hana_serialize_constexpr_if)
add_subdirectory(24_boost_hana_serialize_template_specialization)
add_subdirectory(25_boost_hana_serialize_tag_dispatch)
add_subdirectory(26_boost_hana_serialize_enable_if)
add_subdirectory(27_boost_hana_serialize_boost_enable_if)
add_subdirectory(28_boost_hana_serialize_concept)
add_subdirectory(29_boost_hana_serialize_is_valid)
add_subdirectory(30_boost_hana_serialize_sfinae_decltype)
